force-app/main/default/objects/PaymentTerm__c/PaymentTerm__c.object-meta.xml
<CustomObject>
    <label>Payment Term Line Item</label>
    <nameField>
        <displayFormat>PAT-{000000}</displayFormat>
        <label>Payment Terms REF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Term Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>