force-app/main/default/objects/PaymentTerm__c/fields/AverageInstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>AverageInstallmentAmount__c</fullName>
    <formula>IF(
NoofInstallment__c &gt; 0,
TotalInstallmentAmount__c / NoofInstallment__c ,
0
)</formula>
    <label>Average Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>