force-app/main/default/objects/PaymentTerm__c/fields/AverageInstallmentPercent__c.field-meta.xml
<CustomField>
    <fullName>AverageInstallmentPercent__c</fullName>
    <formula>IF(
NoofInstallment__c &gt; 0,
TotalInstallmentPercent__c / NoofInstallment__c ,
0
)</formula>
    <label>Average Installment Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>