force-app/main/default/objects/PaymentTerm__c/fields/ContractPercent__c.field-meta.xml
<CustomField>
    <fullName>ContractPercent__c</fullName>
    <label>Contract Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>