force-app/main/default/objects/PaymentTerm__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <formula>&quot;On the &quot; &amp; TEXT( PaymentTermMaster__r.DueDate__c ) &amp; &quot;th of Every Month&quot;</formula>
    <label>Due Date</label>
    <type>Text</type>
</CustomField>