force-app/main/default/objects/PaymentTerm__c/fields/PaymentTermMaster__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term Master Name</label>
    <referenceTo>PaymentTermMaster__c</referenceTo>
    <relationshipLabel>Payment Term Line Item</relationshipLabel>
    <relationshipName>Payment_Term</relationshipName>
    <type>Lookup</type>
</CustomField>