force-app/main/default/objects/PaymentTerm__c/fields/PaymentTermMasterType__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermMasterType__c</fullName>
    <formula>Text( PaymentTermMaster__r.Type__c )</formula>
    <label>Payment Term Master Type</label>
    <type>Text</type>
</CustomField>