force-app/main/default/objects/PaymentTerm__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>ประเภทของงวดชำระ</description>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Term</valueSetName>
    </valueSet>
</CustomField>