force-app/main/default/objects/PaymentTerm__c/fields/TransferPercent__c.field-meta.xml
<CustomField>
    <fullName>TransferPercent__c</fullName>
    <formula>BLANKVALUE( ContractPercent__c , 0) + BLANKVALUE( TotalInstallmentPercent__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>