force-app/main/default/objects/PaymentTerm__c/validationRules/ContractAmountAndPercent.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractAmountAndPercent</fullName>
    <active>true</active>
    <description>If Contract Amount is entered, Contract Percent must be empty</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( ContractAmount__c )),
NOT(ISBLANK( ContractPercent__c ))
)</errorConditionFormula>
    <errorMessage>If Contract Amount is entered, Contract Percent must be empty.</errorMessage>
</ValidationRule>