force-app/main/default/objects/PaymentTerm__c/validationRules/InstallmentAmountAndPercent.validationRule-meta.xml
<ValidationRule>
    <fullName>InstallmentAmountAndPercent</fullName>
    <active>true</active>
    <description>If Installment Amount is entered, Installment Percent must be empty</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( TotalInstallmentAmount__c )),
NOT(ISBLANK( TotalInstallmentPercent__c ))
)</errorConditionFormula>
    <errorMessage>If Installment Amount is entered, Installment Percent must be empty</errorMessage>
</ValidationRule>