force-app/main/default/objects/PaymentTerm__c/validationRules/InstallmentValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>InstallmentValidation</fullName>
    <active>true</active>
    <description>To ensure Total Installment Amount and Percent cannot be entered if Number of Installments is zero.</description>
    <errorConditionFormula>AND(
NoofInstallment__c = 0,
OR(
NOT(ISBLANK( TotalInstallmentAmount__c )),
NOT(ISBLANK( TotalInstallmentPercent__c ))
)
)</errorConditionFormula>
    <errorMessage>If the Number of Installments is 0, you cannot enter values for Total Installment Amount and Total Installment Percent.</errorMessage>
</ValidationRule>